--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(kingfisher_controller)
+project(heron_controller)
 
 find_package(catkin REQUIRED COMPONENTS
   control_toolbox
-  kingfisher_msgs
+  heron_msgs
   sensor_msgs
   tf
 )
@@ -19,7 +19,7 @@ include_directories(
 
 ## Declare a cpp executable
 add_executable(${PROJECT_NAME}_node src/controller.cpp src/force_compensator)
-add_dependencies(${PROJECT_NAME}_node kingfisher_msgs_generate_messages_cpp)
+add_dependencies(${PROJECT_NAME}_node heron_msgs_generate_messages_cpp)
 target_link_libraries(${PROJECT_NAME}_node ${catkin_LIBRARIES})
 set_target_properties(${PROJECT_NAME}_node
                       PROPERTIES OUTPUT_NAME controller
