--- a/package.xml
+++ b/package.xml
@@ -15,10 +15,12 @@
   <build_depend>heron_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>message_generation</build_depend>
   <run_depend>control_toolbox</run_depend>
   <run_depend>heron_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>tf</run_depend>
+  <run_depend>message_runtime</run_depend>
 
   <export>
   </export>
