--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>heron_controller</name>
   <version>0.1.0</version>
   <description>The heron_controller package</description>
@@ -11,16 +11,11 @@
   <license>Proprietary</license>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>control_toolbox</build_depend>
-  <build_depend>heron_msgs</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>tf</build_depend>
-  <build_depend>message_generation</build_depend>
-  <run_depend>control_toolbox</run_depend>
-  <run_depend>heron_msgs</run_depend>
-  <run_depend>sensor_msgs</run_depend>
-  <run_depend>tf</run_depend>
-  <run_depend>message_runtime</run_depend>
+  <depend>control_toolbox</depend>
+  <depend>heron_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>tf</depend>
+  <depend>message_runtime</depend>
 
   <export>
   </export>
