--- a/package.xml
+++ b/package.xml
@@ -12,6 +12,8 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <depend>control_toolbox</depend>
+  <depend>geometry_msgs</depend>
+  <depend>nav_msgs</depend>
   <depend>heron_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>tf</depend>
