--- a/package.xml
+++ b/package.xml
@@ -8,7 +8,7 @@
 
   <author>Prasenjit Mukherjee</author>
 
-  <license>Proprietary</license>
+  <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
   <depend>control_toolbox</depend>
